somewhat working slope algo

--- a/Slope_Algorithm.ipynb
+++ b/Slope_Algorithm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "4d2c5cd6",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "66bd6cb9",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "35af2694",
    "metadata": {},
    "outputs": [
@@ -73,7 +73,7 @@
        "         dtype=(numpy.record, [('TIME', '>f8'), ('RATE', '>f4'), ('ERROR', '>f4'), ('FRACEXP', '>f4')]))"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "ab9722dc",
    "metadata": {},
    "outputs": [
@@ -218,7 +218,7 @@
        "[49740 rows x 4 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "b7d69bfa",
    "metadata": {},
    "outputs": [
@@ -253,17 +253,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "3618a2d0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x29c4ce27ca0>"
+       "<matplotlib.collections.PathCollection at 0x1e6c0adfd00>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "d3a8c0ed",
    "metadata": {},
    "outputs": [],
@@ -298,17 +298,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "1b5cb049",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x29c4f08b250>"
+       "<matplotlib.collections.PathCollection at 0x1e6c2d54a30>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "3f326077",
    "metadata": {},
    "outputs": [],
@@ -342,17 +342,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "02fffd4f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x29c4f0f75e0>"
+       "<matplotlib.collections.PathCollection at 0x1e6c2dccf10>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -373,17 +373,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "8c1d2b33",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x29c501334f0>"
+       "<matplotlib.collections.PathCollection at 0x1e6c2e399f0>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -405,17 +405,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 60,
    "id": "0e83b478",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x29c501c4fd0>]"
+       "124"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 57,
    "id": "6846df67",
    "metadata": {},
    "outputs": [
@@ -446,7 +446,7 @@
        "11"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,18 +458,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
+   "id": "ada4a9bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  8,  15,  23,  35,  60,  73,  90, 100, 109, 116, 119], dtype=int64)"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "peak_indices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "id": "0d4f6c10",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8, 10, 18, 30, 44, 62, 75, 92, 102, 111, 118]\n",
+      "[10, 17, 31, 58, 71, 88, 98, 107, 114, 117, 119]\n"
+     ]
+    }
+   ],
    "source": [
-    "Tau_m = 0.01\n",
-    "for peak_index in peak_indices:\n",
-    "    index = peak_index\n",
-    "    while (Mean_rate(index) / Mean_rate(index + 3)) > Tau_m:\n",
+    "Tau_m = 0.8\n",
+    "Tau_d = 0.4\n",
+    "slope_algo_start_time = []\n",
+    "slope_algo_end_time = []\n",
+    "# for peak_index in peak_indices:\n",
+    "for i in range(len(peak_indices)):\n",
+    "    index = peak_indices[i]\n",
+    "#     try:\n",
+    "    while ( (Mean_rate[index] / Mean_rate[index + 3]) > Tau_m ):\n",
+    "        if (index+3) > peak_indices[min(i+1, len(peak_indices) - 1)]:\n",
+    "            break\n",
+    "        index += 1\n",
+    "    slope_algo_end_time.append(index)\n",
+    "#     except:\n",
+    "#         pass\n",
+    "    \n",
+    "    index = peak_indices[i]\n",
+    "#     try:\n",
+    "    while (Mean_rate[index] / Mean_rate[index - 3]) > Tau_m:\n",
+    "        if (index - 3) < peak_indices[max(i-1, 0)]:\n",
+    "            break\n",
+    "        index -= 1\n",
+    "    slope_algo_start_time.append(index)\n",
     "        \n",
-    "    Mean_rate(peak_index)"
+    "#     except:\n",
+    "#         pass\n",
+    "    \n",
+    "#     Mean_rate(peak_index)\n",
+    "print(slope_algo_start_time)\n",
+    "print(slope_algo_end_time)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "b590b6ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "148694400.53781995"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "LC['TIME'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "9e3958b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "148694401.53781995"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "LC['TIME'][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45160587",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
